Bug 437957 - Vault is not mounted if folder contains .directory file
Summary: Vault is not mounted if folder contains .directory file
Status: RESOLVED FIXED
Alias: None
Product: Plasma Vault
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: Ivan Čukić
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-06-01 13:29 UTC by Podagric
Modified: 2021-09-14 20:11 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.23
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Podagric 2021-06-01 13:29:11 UTC
STEPS TO REPRODUCE
1. In dolphin, activate the option to memorize the display style of each folder (https://i.imgur.com/w68YLOU.png)
2. Go to the folder where the vault is mounted and change some folder property (toggle display type, show hidden files, etc.)
3. Try to mount the safe

I know this is an expected behavior, but this bug is very easy to happen and anyone who uses dolphin in this way needs to be deleting the file every time before unlocking the vault

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.21.90
KDE Frameworks Version: 5.82.0
Qt Version: 5.15.2
Graphics Platform: X11
Comment 1 Bug Janitor Service 2021-06-03 05:15:05 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-vault/-/merge_requests/14
Comment 2 Ömer Fadıl USTA 2021-06-03 05:16:46 UTC
I have prepared a MR to fix this issue. Thank you for reporting it
https://invent.kde.org/plasma/plasma-vault/-/merge_requests/14
Comment 3 Podagric 2021-06-03 13:17:32 UTC
thanks!
Comment 4 Nate Graham 2021-09-14 20:11:05 UTC
Fixed by Tom Zander with https://invent.kde.org/plasma/plasma-vault/-/commit/0cfa6ca336757205023f4da062aaf62a67b2a789 in Plasma 5.23!

(This did not get closed automaticallybecause the final squashed commit message did not have a BUG: keyword in it)