Remove .directory file (if exists) before mount

BUG: 437957