kded/engine/backends/cryfs/cryfsbackend.cpp
@@ -92,6 +92,11 @@ FutureResult<> CryFsBackend::mount(const Device &device, const MountPoint &mount
         return errorResult(Error::BackendError, i18n("Failed to create directories, check your permissions"));
     }
 
+    QFile dotDir(mountPoint.data() + QStringLiteral("/.directory"));
+    if (dotDir.exists()) {
+        dotDir.remove();
+    }
+
     auto process =
         // Cypher is specified, use it to create the device
         (!cypher.isEmpty()) ? cryfs({
